# AI-Code-Review-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
codereview/: db.py  diff.py  repo_config.py  schema.sql  settings.py  stores.py  worker.py
codereview/agent/: cost.py  dedup.py  graph.py  prompting.py  state.py
codereview/agent/nodes/: checks.py  context.py  fetch.py  post.py
codereview/agent/prompts/: base_system.md  correctness.md  security.md  style.md  test_coverage.md
codereview/github/: client.py
codereview/rag/: embedder.py  indexer.py  retriever.py  store.py
codereview/web/: app.py  dashboard.py  security.py  webhooks.py
codereview/web/templates/: dashboard.html
docs/: architecture.md
evals/: loader.py  matching.py  run_evals.py
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: capture-screenshots.mjs
scripts/: run_prompt_regression.py  seed_index.py  smoke_github.py
tests/: conftest.py  diff_fixtures.py  fakes.py  test_checks.py  test_chunk_store_pg.py  test_chunking.py  test_cost.py  test_dashboard.py  test_db_pg.py  test_dedup.py  test_diff.py  test_embedder.py  test_eval_fixtures.py  test_eval_matching.py  test_github_client.py  test_indexer.py  test_ops_files.py  test_post_unit.py  test_prompt_contracts.py  test_prompt_regression_offline.py  test_prompting.py  test_repo_config.py  test_retriever.py  test_review_flow.py  test_security.py  test_settings.py  test_state.py  test_stores.py  test_webhooks.py  test_worker.py
tests/prompt_regression/: loader.py
(+155 files in other folders)
