[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codereview"
version = "0.1.0"
description = "AI code review agent for GitHub PRs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "anthropic>=0.66",
    "voyageai>=0.3",
    "langgraph>=0.6",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "unidiff>=0.7.5",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["codereview*"]

[tool.setuptools.package-data]
codereview = ["schema.sql", "agent/prompts/*.md", "web/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["pg: requires a reachable Postgres (DATABASE_URL)"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
"evals/fixtures/*" = ["B006", "E722", "F401", "E501"]
